# awtrix3-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE-APACHE  README.md  RELEASE.md  install.ps1  install.sh  package.json
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  pre-release.yml  release-new.yml  release.yml  test-release.yml
Formula/: awtrix3.rb
benches/: benchmarks.rs
examples/: README.md
examples/custom-apps/: stock-ticker.json  weather-app.json
examples/notifications/: alert.json  download-progress.json  weather.json
examples/settings/: bedroom-mode.json  gaming-setup.json
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/client/: http.rs  mod.rs
src/commands/: apps.rs  custom.rs  device.rs  display.rs  indicators.rs  info.rs  mod.rs  notify.rs  power.rs  settings.rs  sound.rs  system.rs
src/config/: mod.rs
src/models/: app.rs  color.rs  effect.rs  mod.rs  notification.rs  response.rs  settings.rs
src/utils/: discovery.rs  mod.rs
tests/: integration_tests.rs
tests/integration/: test_cli.rs  test_examples.rs  test_utils.rs
