[package]
name = "awtrix3"
version = "0.1.0"
authors = ["Jeremy Eder <jeder@redhat.com>"]
edition = "2021"
rust-version = "1.74"
description = "A modern CLI for controlling AWTRIX3 LED matrix displays"
documentation = "https://docs.rs/awtrix3"
homepage = "https://github.com/jeremyeder/awtrix3-rs"
repository = "https://github.com/jeremyeder/awtrix3-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["awtrix", "led-matrix", "cli", "iot", "smart-home"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "color", "suggestions", "env"] }
clap_complete = "4.5"

# Async runtime
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
    "brotli",
    "trust-dns",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
directories = "5.0"

# CLI enhancements
colored = "2.1"
indicatif = "0.17"
tabled = "0.15"
dialoguer = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
semver = "1.0"
once_cell = "1.19"

# Device discovery
mdns-sd = { version = "0.11", optional = true }

# Configuration parsing
toml = "0.8"

[dev-dependencies]
# Testing
mockito = "1.4"
wiremock = "0.6"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
pretty_assertions = "1.4"
serial_test = "3.1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Property testing
proptest = "1.4"

[features]
default = ["discovery"]
discovery = ["mdns-sd"]
vendored-tls = ["reqwest/native-tls-vendored"]

# Optimize release builds
[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

# Faster compilation for development
[profile.dev]
opt-level = 0

# Profile for distribution
[profile.dist]
inherits = "release"
lto = "fat"

[[bench]]
name = "benchmarks"
harness = false
